--- a/playground/document.ipynb
+++ b/playground/document.ipynb
@@ -370,7 +370,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2/2 [00:00<00:00, 1462.19it/s]\n"
+      "100%|██████████| 2/2 [00:00<00:00, 1629.81it/s]\n"
      ]
     },
     {
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "f4354878",
    "metadata": {},
    "outputs": [
@@ -657,10 +657,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.EmbeddingManager at 0x11c0a3510>"
+       "<__main__.EmbeddingManager at 0x11fb59f10>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,6 +699,325 @@
     "embedding_manager = EmbeddingManager()\n",
     "embedding_manager"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "456071a2",
+   "metadata": {},
+   "source": [
+    "### Vector Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "4bd79299",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vector store initialized. Collection: text_documents\n",
+      "Existing documents in collection: <bound method Collection.count of Collection(name=text_documents)>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.VectorStore at 0x1329e5c90>"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class VectorStore:\n",
+    "    \"\"\"Manages document embedding in ChromaDB vector store\"\"\"\n",
+    "\n",
+    "    def __init__(self, collection_name: str = \"text_documents\", persist_directory: str = \"../data/text_files\") -> None:\n",
+    "        \"\"\"\n",
+    "        Initialize a vector store\n",
+    "        \n",
+    "        :param collection_name: Name of the ChromaDB collection\n",
+    "        :param persist_directory: Directory to store a persistent copy of the data store\n",
+    "        \"\"\"\n",
+    "        self.collection_name = collection_name\n",
+    "        self.persist_directory = persist_directory\n",
+    "        self.client = None\n",
+    "        self.collection = None\n",
+    "        self._initialize_store()\n",
+    "\n",
+    "    def _initialize_store(self):\n",
+    "        try:\n",
+    "            # Create the persistent client in ChromaDB\n",
+    "            os.makedirs(self.persist_directory, exist_ok=True)\n",
+    "            self.client = chromadb.PersistentClient(path = self.persist_directory)\n",
+    "\n",
+    "            # Create the collection\n",
+    "            self.collection = self.client.get_or_create_collection(name = self.collection_name, metadata={'description': 'Document embeddings for the RAG chatbot.'})\n",
+    "\n",
+    "            print(f\"Vector store initialized. Collection: {self.collection_name}\")\n",
+    "            print(f\"Existing documents in collection: {self.collection.count}\")\n",
+    "        \n",
+    "        except Exception as ex:\n",
+    "            print(f\"Error initializing vector store: {ex}\")\n",
+    "            raise\n",
+    "\n",
+    "    def add_document(self, documents: List[Any], embeddings: np.ndarray):\n",
+    "        \"\"\"\n",
+    "        Add documents and their embeddings to the vector store\n",
+    "        \n",
+    "        :param documents: List of documents\n",
+    "        :param embeddings: Corresponding embeddings for the documents\n",
+    "        \"\"\"\n",
+    "\n",
+    "        if len(documents) != len(embeddings):\n",
+    "            raise ValueError(\"Number of documents must match the number of embeddings!\")\n",
+    "        \n",
+    "        print(f\"Adding {len(documents)} documents to the vectore store..\")\n",
+    "\n",
+    "        # Prepare the data for ChromaDB\n",
+    "        ids = []\n",
+    "        metadatas = []\n",
+    "        document_text = []\n",
+    "        embeddings_list = []\n",
+    "\n",
+    "        for i, (doc, embed) in enumerate(zip(documents, embeddings)):\n",
+    "            # Generate an ID\n",
+    "            doc_id = f\"doc_{uuid.uuid4().hex[:8]}_{i}\"\n",
+    "            ids.append(doc_id)\n",
+    "\n",
+    "            # Prepare the metadata\n",
+    "            metadata = dict(doc.metadata)\n",
+    "            metadata['doc_index'] = i\n",
+    "            metadata['content_length'] = len(doc.page_content)\n",
+    "            metadatas.append(metadata)\n",
+    "\n",
+    "            # Prepare the document content\n",
+    "            document_text.append(doc.page_content)\n",
+    "\n",
+    "            # Prepare the embeddings list\n",
+    "            embeddings_list.append(embed.tolist())\n",
+    "\n",
+    "        try:\n",
+    "            self.collection.add(\n",
+    "                ids=ids, \n",
+    "                embeddings=embeddings_list, \n",
+    "                metadatas=metadatas, \n",
+    "                documents=document_text\n",
+    "            )\n",
+    "            print(f\"Successfully add {len(documents)} to the vectore store.\")\n",
+    "            print(f\"Total number of documents in the vectore store: {self.collection.count()}\")\n",
+    "            \n",
+    "        except Exception as ex:\n",
+    "            print(f\"Could not add document to the collection: {ex}\")\n",
+    "            raise\n",
+    "\n",
+    "vector_store = VectorStore()\n",
+    "vector_store"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "12909996",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating embeddings for 59 texts...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|██████████| 2/2 [00:00<00:00,  5.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated embeddings with shape: (59, 384)\n",
+      "Adding 59 documents to the vectore store..\n",
+      "Successfully add 59 to the vectore store.\n",
+      "Total number of documents in the vectore store: 118\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Converting the text to embeddings\n",
+    "texts = [doc.page_content for doc in chunks]\n",
+    "embeddings = embedding_manager.generate_embeddings(texts)\n",
+    "vector_store.add_document(documents=chunks, embeddings=embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65ae2f88",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.RAGRetriever at 0x132bea550>"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class RAGRetriever:\n",
+    "    \"\"\"Handles query-based retrieval from the vector store\"\"\"\n",
+    "\n",
+    "    def __init__(self, vector_store: VectorStore, embedding_manager: EmbeddingManager):\n",
+    "        self.vector_store = vector_store\n",
+    "        self.embedding_manager = embedding_manager\n",
+    "    \n",
+    "    def retrieve(self, query: str, top_k: int = 5, score_threshold: float = 0.0000) -> List[Dict[str, Any]]:\n",
+    "        \"\"\"Retrieve relevant documents based onthe given query\n",
+    "        \n",
+    "        Args:\n",
+    "            query: the search query\n",
+    "            top_k: the number of documents to be returned\n",
+    "            score_threshold: minimum similarity score threshold\n",
+    "        \n",
+    "        Returns:\n",
+    "            List of dictionaries containing the documents and metadata\n",
+    "        \"\"\"\n",
+    "        print(f\"Retrieving documents for query: {query}\")\n",
+    "        print(f\"Top_k: {top_k}, Score Threshold: {score_threshold}\")\n",
+    "\n",
+    "        # Generate query embedding\n",
+    "        query_embed = self.embedding_manager.generate_embeddings([query])[0]\n",
+    "\n",
+    "        try:\n",
+    "            results = self.vector_store.collection.query(\n",
+    "                query_embeddings=query_embed,\n",
+    "                n_results=top_k\n",
+    "            )\n",
+    "\n",
+    "            # Process the results\n",
+    "            retrieved_docs = []\n",
+    "\n",
+    "            if results['documents'] and results['documents'][0]:\n",
+    "                documents = results['documents'][0]\n",
+    "                metadatas = results['metadatas'][0]\n",
+    "                distances = results['distances'][0]\n",
+    "                ids = results['ids'][0]\n",
+    "\n",
+    "                for i, (doc_id, document, metadata, distance) in enumerate(zip(ids, documents, metadatas, distances)):\n",
+    "                    # Convert distance to similarity score\n",
+    "                    # NEED TO CHECK THIS???????????????\n",
+    "                    similaity_score = 1 - distance\n",
+    "\n",
+    "                    if similaity_score >= score_threshold:\n",
+    "                        retrieved_docs.append({\n",
+    "                            'id': doc_id,\n",
+    "                            'metadata': metadata,\n",
+    "                            'content': document,\n",
+    "                            'similarity_score': similaity_score,\n",
+    "                            'distance': distance,\n",
+    "                            'rank': i + 1\n",
+    "                        })\n",
+    "                \n",
+    "                print(f\"Retrieved {len(retrieved_docs)} documents after fitering.\")\n",
+    "            else:\n",
+    "                print(\"No documents found!\")\n",
+    "            return retrieved_docs\n",
+    "        except Exception as ex:\n",
+    "            print(f\"Error searching the vector store: {ex}\")\n",
+    "            return []\n",
+    "        \n",
+    "rag_retriever = RAGRetriever(vector_store, embedding_manager)\n",
+    "rag_retriever\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "f2e9411a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Retrieving documents for query: Insurance Disclaimer\n",
+      "Top_k: 5, Score Threshold: 0.0\n",
+      "Generating embeddings for 1 texts...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|██████████| 1/1 [00:00<00:00,  4.50it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generated embeddings with shape: (1, 384)\n",
+      "{'ids': [['doc_6e44b1a5_46', 'doc_02fa83be_46', 'doc_d40e4e91_43', 'doc_d52eb85a_43', 'doc_0b471b75_23']], 'embeddings': None, 'documents': [['6.3 Limitation of Liability', '6.3 Limitation of Liability', '-----------------------------------\\n\\n6. Liability Waiver & Assumption of Risk\\n\\n6.1 Physical Therapy Risks', '-----------------------------------\\n\\n6. Liability Waiver & Assumption of Risk\\n\\n6.1 Physical Therapy Risks', 'Patients may request a superbill, but reimbursement is not assured.\\n\\n3.5 Travel & Service Area']], 'uris': None, 'included': ['metadatas', 'documents', 'distances'], 'data': None, 'metadatas': [[{'doc_index': 46, 'source_file': 'terms_conditions.txt', 'source': '../data/text_files/terms_conditions.txt', 'content_length': 27, 'file_type': 'txt'}, {'source': '../data/text_files/terms_conditions.txt', 'source_file': 'terms_conditions.txt', 'doc_index': 46, 'content_length': 27, 'file_type': 'txt'}, {'file_type': 'txt', 'content_length': 105, 'source': '../data/text_files/terms_conditions.txt', 'doc_index': 43, 'source_file': 'terms_conditions.txt'}, {'file_type': 'txt', 'source_file': 'terms_conditions.txt', 'content_length': 105, 'doc_index': 43, 'source': '../data/text_files/terms_conditions.txt'}, {'doc_index': 23, 'content_length': 94, 'source_file': 'terms_conditions.txt', 'file_type': 'txt', 'source': '../data/text_files/terms_conditions.txt'}]], 'distances': [[1.0032918453216553, 1.0032918453216553, 1.0196483135223389, 1.0196483135223389, 1.2484378814697266]]}\n",
+      "Retrieved 0 documents after fitering.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query = \"Insurance Disclaimer\"\n",
+    "rag_retriever.retrieve(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7be007a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "21996684",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
